--- a/service.html
+++ b/service.html
@@ -455,96 +455,8 @@
           <a href="#" class="footer-logo d-block">
             <img src="./assets/images/logo-footer.svg" alt="" />
           </a>
-          <ul class="footer-social d-md-flex d-lg-none">
-            <li>
-              <a href="#" class="facebook">
-                <svg
-                  width="34"
-                  height="34"
-                  viewBox="0 0 34 34"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <circle cx="17" cy="17" r="16.5" stroke="white" />
-                  <path
-                    d="M21.3548 17.931L21.871 14.8276H18.7742V12.6552C18.7742 11.7862 19.0968 11.1034 20.5161 11.1034H22V8.24828C21.1613 8.12414 20.2581 8 19.4194 8C16.7742 8 14.9032 9.55172 14.9032 12.3448V14.8276H12V17.931H14.9032V26C16.1935 26 17.4839 26 18.7742 26V17.931H21.3548Z"
-                    fill="white"
-                  />
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a href="#" class="insta">
-                <svg
-                  width="34"
-                  height="34"
-                  viewBox="0 0 34 34"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <circle cx="17" cy="17" r="16.5" stroke="white" />
-                  <g clip-path="url(#clip0_1374_137)">
-                    <path
-                      d="M16.9968 8.00101C18.2827 8.00101 19.5688 8.00389 20.8547 8.00101C21.6089 7.9987 22.3406 8.12728 23.0196 8.44932C24.6448 9.21968 25.6302 10.4946 25.9275 12.2781C25.9749 12.5811 25.9975 12.8876 25.9952 13.1943C26.0004 15.7314 25.9952 18.2711 25.9996 20.8094C26.0019 22.0526 25.6536 23.1753 24.861 24.1403C24.1325 25.028 23.2096 25.6251 22.0783 25.8603C21.6801 25.9448 21.2744 25.9894 20.8674 25.9932C18.2908 26.0048 15.7141 26.0004 13.1372 25.9987C11.9217 25.9987 10.8212 25.6481 9.87387 24.8743C8.98011 24.1437 8.38331 23.2151 8.13969 22.0829C8.05359 21.68 8.00925 21.2693 8.00735 20.8573C7.99553 18.2856 8.00158 15.7136 8.0013 13.1416C8.0013 11.9085 8.36255 10.7982 9.15165 9.84417C9.88078 8.96281 10.8051 8.38648 11.9269 8.13305C12.334 8.04334 12.7498 7.99933 13.1666 8.00187L16.9968 8.00101ZM12.6806 16.9997C12.6831 19.3742 14.6122 21.3243 16.9922 21.314C19.4374 21.3047 21.307 19.369 21.3168 16.9988C21.3258 14.6197 19.3624 12.6696 16.9922 12.6808C14.614 12.6932 12.6782 14.6313 12.6806 16.9997ZM20.5995 12.3219C20.5978 12.9023 21.0813 13.3886 21.6695 13.3993C22.2527 13.4094 22.7564 12.9129 22.7578 12.3262C22.7569 12.0401 22.6434 11.7658 22.4418 11.5628C22.2402 11.3598 21.9668 11.2443 21.6807 11.2413C21.0911 11.2396 20.6016 11.7288 20.5995 12.3219Z"
-                      fill="white"
-                    />
-                    <path
-                      d="M16.9964 14.1201C18.5769 14.1175 19.8815 15.4241 19.8795 17.0064C19.8775 18.5886 18.5821 19.8779 17.0013 19.8788C15.4156 19.8788 14.1182 18.5814 14.1211 16.994C14.1235 16.2323 14.4273 15.5025 14.966 14.964C15.5048 14.4256 16.2347 14.1222 16.9964 14.1201Z"
-                      fill="white"
-                    />
-                  </g>
-                  <defs>
-                    <clipPath id="clip0_1374_137">
-                      <rect
-                        width="18"
-                        height="18"
-                        fill="white"
-                        transform="translate(8 8)"
-                      />
-                    </clipPath>
-                  </defs>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a href="#" class="youtube">
-                <svg
-                  width="34"
-                  height="34"
-                  viewBox="0 0 34 34"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <circle cx="17" cy="17" r="16.5" stroke="white" />
-                  <path
-                    fill-rule="evenodd"
-                    clip-rule="evenodd"
-                    d="M24.8253 9.48941C25.682 9.75294 26.3574 10.5247 26.5881 11.5035C27.0164 13.2918 26.9999 17.0188 26.9999 17.0188C26.9999 17.0188 26.9999 20.7271 26.5881 22.5153C26.3574 23.4941 25.682 24.2659 24.8253 24.5294C23.2602 25 17 25 17 25C17 25 10.7562 25 9.17462 24.5106C8.31795 24.2471 7.6425 23.4753 7.41186 22.4965C7 20.7271 7 17 7 17C7 17 7 13.2918 7.41186 11.5035C7.6425 10.5247 8.33443 9.73412 9.17462 9.47059C10.7397 9 17 9 17 9C17 9 23.2602 9 24.8253 9.48941ZM20.2125 16.8693L15.0065 20.2952V13.4434L20.2125 16.8693Z"
-                    fill="white"
-                  />
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a href="#" class="tiktok">
-                <svg
-                  width="34"
-                  height="34"
-                  viewBox="0 0 34 34"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <circle cx="17" cy="17" r="16.5" stroke="white" />
-                  <path
-                    d="M14.8411 23.5743C16.5099 23.5743 17.8627 22.3795 17.8627 20.5526V7H21.4865C21.2833 9.47163 23.7403 11.8592 26.45 11.8046V15.2121C24.1327 15.2121 22.1621 14.2323 21.4762 13.6885V20.5526C21.4762 23.5743 19.0992 27.0007 14.8411 27.0007C10.583 27.0007 8.25781 23.5743 8.25781 20.5526C8.25781 16.2879 12.771 13.8145 15.7602 14.419V17.8898C15.6098 17.8366 15.222 17.758 14.8917 17.758C13.2091 17.6959 11.8194 19.0607 11.8194 20.5526C11.8194 22.2214 13.1723 23.5743 14.8411 23.5743Z"
-                    fill="white"
-                  />
-                </svg>
-              </a>
-            </li>
-          </ul>
           <div class="footer-bottom row g-0">
-            <div class="footer-bottom__left col-lg-3">
+            <div class="footer-bottom__left col-lg-3 d-none d-lg-block">
               <a
                 href="#"
                 class="b3-font color-white text-uppercase mt-auto link-hover"
@@ -565,7 +477,7 @@
                   </p>
                 </div>
               </div>
-              <div class="footer-download">
+              <div class="footer-download d-none d-lg-flex">
                 <a href="#" class="btn-download" download>DOWNLOAD BROCHURE</a>
                 <div class="copyright">
                   © 2025 VIAS RESORT VAN PHONG PENINSULA
@@ -602,7 +514,7 @@
                 <h4 class="title-social text-uppercase b3-font color-white">
                   Follow us on
                 </h4>
-                <ul class="footer-social d-none d-lg-flex">
+                <ul class="footer-social d-flex">
                   <li>
                     <a href="#" class="facebook">
                       <svg
@@ -706,6 +618,15 @@
                     </a>
                   </li>
                 </ul>
+              </div>
+              <div class="footer-download d-flex flex-column d-lg-none">
+                <a href="#" class="btn-download" download>DOWNLOAD BROCHURE</a>
+                <a href="#" class="b3-font color-white text-uppercase"
+                  >About Van phong peninsula</a
+                >
+                <div class="copyright">
+                  © 2025 VIAS RESORT VAN PHONG PENINSULA
+                </div>
               </div>
               <a
                 href="https://alphacreative.vn/"
@@ -729,97 +650,11 @@
           <a href="#" class="footer-logo d-block">
             <img src="./assets/images/logo-footer.svg" alt="" />
           </a>
-          <ul class="footer-social d-md-flex d-lg-none">
-            <li>
-              <a href="#" class="facebook">
-                <svg
-                  width="34"
-                  height="34"
-                  viewBox="0 0 34 34"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <circle cx="17" cy="17" r="16.5" stroke="white" />
-                  <path
-                    d="M21.3548 17.931L21.871 14.8276H18.7742V12.6552C18.7742 11.7862 19.0968 11.1034 20.5161 11.1034H22V8.24828C21.1613 8.12414 20.2581 8 19.4194 8C16.7742 8 14.9032 9.55172 14.9032 12.3448V14.8276H12V17.931H14.9032V26C16.1935 26 17.4839 26 18.7742 26V17.931H21.3548Z"
-                    fill="white"
-                  />
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a href="#" class="insta">
-                <svg
-                  width="34"
-                  height="34"
-                  viewBox="0 0 34 34"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <circle cx="17" cy="17" r="16.5" stroke="white" />
-                  <g clip-path="url(#clip0_1374_137)">
-                    <path
-                      d="M16.9968 8.00101C18.2827 8.00101 19.5688 8.00389 20.8547 8.00101C21.6089 7.9987 22.3406 8.12728 23.0196 8.44932C24.6448 9.21968 25.6302 10.4946 25.9275 12.2781C25.9749 12.5811 25.9975 12.8876 25.9952 13.1943C26.0004 15.7314 25.9952 18.2711 25.9996 20.8094C26.0019 22.0526 25.6536 23.1753 24.861 24.1403C24.1325 25.028 23.2096 25.6251 22.0783 25.8603C21.6801 25.9448 21.2744 25.9894 20.8674 25.9932C18.2908 26.0048 15.7141 26.0004 13.1372 25.9987C11.9217 25.9987 10.8212 25.6481 9.87387 24.8743C8.98011 24.1437 8.38331 23.2151 8.13969 22.0829C8.05359 21.68 8.00925 21.2693 8.00735 20.8573C7.99553 18.2856 8.00158 15.7136 8.0013 13.1416C8.0013 11.9085 8.36255 10.7982 9.15165 9.84417C9.88078 8.96281 10.8051 8.38648 11.9269 8.13305C12.334 8.04334 12.7498 7.99933 13.1666 8.00187L16.9968 8.00101ZM12.6806 16.9997C12.6831 19.3742 14.6122 21.3243 16.9922 21.314C19.4374 21.3047 21.307 19.369 21.3168 16.9988C21.3258 14.6197 19.3624 12.6696 16.9922 12.6808C14.614 12.6932 12.6782 14.6313 12.6806 16.9997ZM20.5995 12.3219C20.5978 12.9023 21.0813 13.3886 21.6695 13.3993C22.2527 13.4094 22.7564 12.9129 22.7578 12.3262C22.7569 12.0401 22.6434 11.7658 22.4418 11.5628C22.2402 11.3598 21.9668 11.2443 21.6807 11.2413C21.0911 11.2396 20.6016 11.7288 20.5995 12.3219Z"
-                      fill="white"
-                    />
-                    <path
-                      d="M16.9964 14.1201C18.5769 14.1175 19.8815 15.4241 19.8795 17.0064C19.8775 18.5886 18.5821 19.8779 17.0013 19.8788C15.4156 19.8788 14.1182 18.5814 14.1211 16.994C14.1235 16.2323 14.4273 15.5025 14.966 14.964C15.5048 14.4256 16.2347 14.1222 16.9964 14.1201Z"
-                      fill="white"
-                    />
-                  </g>
-                  <defs>
-                    <clipPath id="clip0_1374_137">
-                      <rect
-                        width="18"
-                        height="18"
-                        fill="white"
-                        transform="translate(8 8)"
-                      />
-                    </clipPath>
-                  </defs>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a href="#" class="youtube">
-                <svg
-                  width="34"
-                  height="34"
-                  viewBox="0 0 34 34"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <circle cx="17" cy="17" r="16.5" stroke="white" />
-                  <path
-                    fill-rule="evenodd"
-                    clip-rule="evenodd"
-                    d="M24.8253 9.48941C25.682 9.75294 26.3574 10.5247 26.5881 11.5035C27.0164 13.2918 26.9999 17.0188 26.9999 17.0188C26.9999 17.0188 26.9999 20.7271 26.5881 22.5153C26.3574 23.4941 25.682 24.2659 24.8253 24.5294C23.2602 25 17 25 17 25C17 25 10.7562 25 9.17462 24.5106C8.31795 24.2471 7.6425 23.4753 7.41186 22.4965C7 20.7271 7 17 7 17C7 17 7 13.2918 7.41186 11.5035C7.6425 10.5247 8.33443 9.73412 9.17462 9.47059C10.7397 9 17 9 17 9C17 9 23.2602 9 24.8253 9.48941ZM20.2125 16.8693L15.0065 20.2952V13.4434L20.2125 16.8693Z"
-                    fill="white"
-                  />
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a href="#" class="tiktok">
-                <svg
-                  width="34"
-                  height="34"
-                  viewBox="0 0 34 34"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <circle cx="17" cy="17" r="16.5" stroke="white" />
-                  <path
-                    d="M14.8411 23.5743C16.5099 23.5743 17.8627 22.3795 17.8627 20.5526V7H21.4865C21.2833 9.47163 23.7403 11.8592 26.45 11.8046V15.2121C24.1327 15.2121 22.1621 14.2323 21.4762 13.6885V20.5526C21.4762 23.5743 19.0992 27.0007 14.8411 27.0007C10.583 27.0007 8.25781 23.5743 8.25781 20.5526C8.25781 16.2879 12.771 13.8145 15.7602 14.419V17.8898C15.6098 17.8366 15.222 17.758 14.8917 17.758C13.2091 17.6959 11.8194 19.0607 11.8194 20.5526C11.8194 22.2214 13.1723 23.5743 14.8411 23.5743Z"
-                    fill="white"
-                  />
-                </svg>
-              </a>
-            </li>
-          </ul>
           <div class="footer-bottom row g-0">
-            <div class="footer-bottom__left col-lg-3">
-              <a href="#" class="b3-font color-white text-uppercase"
+            <div class="footer-bottom__left col-lg-3 d-none d-lg-block">
+              <a
+                href="#"
+                class="b3-font color-white text-uppercase mt-auto link-hover"
                 >About Van phong peninsula</a
               >
             </div>
@@ -827,11 +662,17 @@
               <div class="footer-info">
                 <p class="text-center">Van Phong Bay, Nha Trang, Khanh Hoa</p>
                 <div class="footer-contact">
-                  <a href="#">E. sale@vanphongresort.vn</a>
-                  <a href="#">T. (+84) 2583 939 888</a>
+                  <p class="contact-email">
+                    Email:
+                    <a href="#" class="link-hover"> sale@vanphongresort.vn</a>
+                  </p>
+                  <p class="contact-tel">
+                    Telephone:
+                    <a href="#" class="link-hover"> (+84) 2583 939 888</a>
+                  </p>
                 </div>
               </div>
-              <div class="footer-download">
+              <div class="footer-download d-none d-lg-flex">
                 <a href="#" class="btn-download" download>DOWNLOAD BROCHURE</a>
                 <div class="copyright">
                   © 2025 VIAS RESORT VAN PHONG PENINSULA
@@ -868,7 +709,7 @@
                 <h4 class="title-social text-uppercase b3-font color-white">
                   Follow us on
                 </h4>
-                <ul class="footer-social d-none d-lg-flex">
+                <ul class="footer-social d-flex">
                   <li>
                     <a href="#" class="facebook">
                       <svg
@@ -972,6 +813,15 @@
                     </a>
                   </li>
                 </ul>
+              </div>
+              <div class="footer-download d-flex flex-column d-lg-none">
+                <a href="#" class="btn-download" download>DOWNLOAD BROCHURE</a>
+                <a href="#" class="b3-font color-white text-uppercase"
+                  >About Van phong peninsula</a
+                >
+                <div class="copyright">
+                  © 2025 VIAS RESORT VAN PHONG PENINSULA
+                </div>
               </div>
               <a
                 href="https://alphacreative.vn/"
